# mod_openai_s2s

./: Makefile.am  README.md  audio_pipe.cpp  audio_pipe.hpp  cmd_parser.c  cmd_parser.h  mod_openai_s2s.c  mod_openai_s2s.h  openai_glue.cpp  openai_glue.h  parser.cpp  parser.hpp
